--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
 
 <body>
 
-  <!-- ✅ CFC_FUNC_15_SUBPASO_1.3 — Loader HTML + fadeOut (24-10-2025) -->
+  <!-- ✅ BITÁCORA CFC — Loader Premium Animado (Subpaso 1.3 / 25-10-2025) -->
   <div id="loader">
     <img src="img/logo.png" alt="Campus CFC Logo">
     <p id="quote"></p>
@@ -163,7 +163,6 @@
       if (entrarBtn) {
         entrarBtn.addEventListener("click", function(e) {
           e.preventDefault();
-          // Fuerza una recarga limpia para evitar estado cacheado
           window.location.href = this.getAttribute("href");
         });
       }
