--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,6 +169,10 @@
     });
   </script>
 
+  <!-- Scripts globales premium -->
   <script src="js/loader.js" defer></script>
+  <script src="js/header.js" defer></script>
+  <script src="js/footer.js" defer></script>
+
 </body>
 </html>
