--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
 
 <body>
 
-  <!-- ✅ BITÁCORA CFC — Loader Premium Animado (Subpaso 1.3 / 25-10-2025) -->
+  <!-- ✅ BITÁCORA CFC — Loader Premium Animado (Subpaso 1.3 / 26-10-2025) -->
   <div id="loader">
     <img src="img/logo.png" alt="Campus CFC Logo">
     <p id="quote"></p>
@@ -154,7 +154,7 @@
     </p>
   </main>
 
-  <footer>© 2025 Campus CFC Trading</footer>
+  <!-- 🧩 Footer estático removido (se genera automáticamente con footer.js) -->
 
   <!-- Script fix: recarga limpia al entrar a los módulos -->
   <script>
