--- a/frontend/modules/index.html
+++ b/frontend/modules/index.html
@@ -119,6 +119,24 @@
       transform: scale(1.05);
       background: linear-gradient(90deg, #005dd4, #00a3cc);
     }
+
+    /* [INICIO BLOQUE CFC NUEVO] - Estilos visuales nuevos */
+    #continueBtn {
+      margin-top: 25px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      background: #d4af37;
+      color: #0a0a0a;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
+    }
+    #continueBtn:hover {
+      filter: brightness(1.2);
+      transform: scale(1.05);
+    }
+    /* [FIN BLOQUE CFC NUEVO] */
   </style>
 </head>
 
@@ -127,30 +145,34 @@
     <h1>📘 Módulos del Campus CFC Trading LITE</h1>
 
     <ul>
-      <li><a href="./1/index.html">Módulo 1 - Introducción a la Psicología del Trader</a></li>
-      <li><a href="./2/index.html">Módulo 2 - Neurociencia del Trading</a></li>
-      <li><a href="./3/index.html">Módulo 3 - Fundamentos de Psicología Profunda</a></li>
-      <li><a href="./4/index.html">Módulo 4 - Modelo Mental del Trader Profesional</a></li>
-      <li><a href="./5/index.html">Módulo 5 - Herramientas Avanzadas de Regulación Emocional</a></li>
-      <li><a href="./6/index.html">Módulo 6 - Psicología de la Gestión del Capital</a></li>
-      <li><a href="./7/index.html">Módulo 7 - Estrategias Psicológicas por Etapas de Desarrollo</a></li>
-      <li><a href="./8/index.html">Módulo 8 - Integración Estrategia–Psicología</a></li>
-      <li><a href="./9/index.html">Módulo 9 - Casos de Estudio y Simulaciones Reales</a></li>
-      <li><a href="./10/index.html">Módulo 10 - Optimización Mental y Rendimiento Peak</a></li>
-      <li><a href="./11/index.html">Módulo 11 - Ecosistema de Apoyo y Herramientas</a></li>
-      <li><a href="./12/index.html">Módulo 12 - Maestría Continua y Legado</a></li>
-      <li><a href="./13/index.html">Módulo 13 - Psicología del Error y Reprogramación Mental</a></li>
-      <li><a href="./14/index.html">Módulo 14 - El Mapa del Autocontrol Extremo</a></li>
-      <li><a href="./15/index.html">Módulo 15 - Arquitectura del Trading Mental Automático</a></li>
-      <li><a href="./16/index.html">Módulo 16 - Reversión Psicológica y Superación del Burnout</a></li>
-      <li><a href="./17/index.html">Módulo 17 - Psicología del Trader de Alto Impacto</a></li>
-      <li><a href="./18/index.html">Módulo 18 - La Mentalidad del Mentor Trader</a></li>
-      <li><a href="./19/index.html">Módulo 19 - Integración Total Cuerpo–Mente–Mercado</a></li>
-      <li><a href="./20/index.html">Módulo 20 - Legado Final del Trader Consciente</a></li>
+      <li><a data-module="1" href="./1/index.html">Módulo 1 - Introducción a la Psicología del Trader</a></li>
+      <li><a data-module="2" href="./2/index.html">Módulo 2 - Neurociencia del Trading</a></li>
+      <li><a data-module="3" href="./3/index.html">Módulo 3 - Fundamentos de Psicología Profunda</a></li>
+      <li><a data-module="4" href="./4/index.html">Módulo 4 - Modelo Mental del Trader Profesional</a></li>
+      <li><a data-module="5" href="./5/index.html">Módulo 5 - Herramientas Avanzadas de Regulación Emocional</a></li>
+      <li><a data-module="6" href="./6/index.html">Módulo 6 - Psicología de la Gestión del Capital</a></li>
+      <li><a data-module="7" href="./7/index.html">Módulo 7 - Estrategias Psicológicas por Etapas de Desarrollo</a></li>
+      <li><a data-module="8" href="./8/index.html">Módulo 8 - Integración Estrategia–Psicología</a></li>
+      <li><a data-module="9" href="./9/index.html">Módulo 9 - Casos de Estudio y Simulaciones Reales</a></li>
+      <li><a data-module="10" href="./10/index.html">Módulo 10 - Optimización Mental y Rendimiento Peak</a></li>
+      <li><a data-module="11" href="./11/index.html">Módulo 11 - Ecosistema de Apoyo y Herramientas</a></li>
+      <li><a data-module="12" href="./12/index.html">Módulo 12 - Maestría Continua y Legado</a></li>
+      <li><a data-module="13" href="./13/index.html">Módulo 13 - Psicología del Error y Reprogramación Mental</a></li>
+      <li><a data-module="14" href="./14/index.html">Módulo 14 - El Mapa del Autocontrol Extremo</a></li>
+      <li><a data-module="15" href="./15/index.html">Módulo 15 - Arquitectura del Trading Mental Automático</a></li>
+      <li><a data-module="16" href="./16/index.html">Módulo 16 - Reversión Psicológica y Superación del Burnout</a></li>
+      <li><a data-module="17" href="./17/index.html">Módulo 17 - Psicología del Trader de Alto Impacto</a></li>
+      <li><a data-module="18" href="./18/index.html">Módulo 18 - La Mentalidad del Mentor Trader</a></li>
+      <li><a data-module="19" href="./19/index.html">Módulo 19 - Integración Total Cuerpo–Mente–Mercado</a></li>
+      <li><a data-module="20" href="./20/index.html">Módulo 20 - Legado Final del Trader Consciente</a></li>
     </ul>
 
     <div style="text-align:center;">
       <button class="btn-volver" onclick="window.location.href='/frontend/loader.html'">⬅ Volver al inicio</button>
+
+      <!-- [INICIO BLOQUE CFC NUEVO] - Botón Continuar -->
+      <button id="continueBtn">▶ Continuar último módulo</button>
+      <!-- [FIN BLOQUE CFC NUEVO] -->
     </div>
   </main>
 
